--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -2,53 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <!-- shift alt A para insertar un comentario -->
-    <!-- alt z para wrapear un texto que se salga...una url por ejem -->
-
 </head>
 <body>
-
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
-            <!-- es el icono de las comillas tarido de fontawesome-->
-            <i class="fas fa-quote-left"></i> 
-
-            <span id="quote">No hagas las cosas pensando en el futuro, trabaja y los puntos se unirán solos.</span><!--La etiqueta span permite asignar un estilo a un elemento pequeño dentro de una etiqueta de bloque. Por ejemplo asigna un color a una palabra dentro de un párrafo.  -->
-
-            <i class="fas fa-quote-right"></i>
-
+            <i class="fas fa-quote-left"></i>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
-        <div class="author">
-            <span id="author">Steve Jobs</span>
+        <div class="quote-author">
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
-            <button class="twitter-button" id="twitter" title="Tweet This!"><!-- este tittle es un cartelito
-                                                                            para cuando el usuario pase el ratón -->
+            <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
-                <!-- Esto trae de font awesome el icono de twitter (hay de todas las bigtech) -->
-
             </button>
             <button id="new-quote">New Quote</button>
-
-            
-
         </div>
-
-
-    </div> 
-
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
-    <script src"script.js"></script>    
-
-
+    <script src="quotes.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
